fix: force update duplicate items in double chest